## Process this file with automake to produce Makefile.in
pkgconfigdir    = $(libdir)/pkgconfig
pkgconfig_DATA  = libmbus.pc
doc_DATA        = README.md LICENSE     \
                  hardware/MBus_USB.pdf \
                  hardware/MBus_USB.txt
EXTRA_DIST      = README.md LICENSE AUTHORS
SUBDIRS		= mbus bin
